--- a/stats/templates/stats/main_page.html
+++ b/stats/templates/stats/main_page.html
@@ -1,15 +1,8 @@
-<html>
-    <head>
-        <title>An example</title>
-    </head>
-    <body>
-        <div>
-            <form action="submit" method="post">
-                {% csrf_token %}
-                <input type="file" name="file"><br>
-                <!--<input type="text" name="info" size="150" ><br>-->
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-    </body>
-</html>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="file" name="myfile">
+    <button type="submit">Upload</button>
+</form>
+    {% if uploaded_file_url %}
+        <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+    {% endif %}
