--- a/stats/templates/stats/main_page.html
+++ b/stats/templates/stats/main_page.html
@@ -1,6 +1,6 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="file" name="myfile">
+    {{ form.as_p }}
     <button type="submit">Upload</button>
 </form>
     {% if uploaded_file_url %}
