--- a/stats/templates/stats/main_page.html
+++ b/stats/templates/stats/main_page.html
@@ -1,8 +1,12 @@
+<html>
+<head>
+    <title>TEST THIS SHIT</title>
+</head>
+<body>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Upload</button>
 </form>
-    {% if uploaded_file_url %}
-        <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-    {% endif %}
+</body>
+</html>
