--- a/stats/templates/stats/main_page.html
+++ b/stats/templates/stats/main_page.html
@@ -1,12 +1,10 @@
-<html>
-<head>
-    <title>TEST THIS SHIT</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} TEST THIS SHIT {% endblock %}
+
+{% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Upload</button>
 </form>
-</body>
-</html>
+{% endblock %}
