--- a/stats/templates/stats/main_page.html
+++ b/stats/templates/stats/main_page.html
@@ -1,6 +1,6 @@
 {% extends "stats/base.html" %}
 {% block title %} TEST THIS SHIT {% endblock %}
-
+{% block branding %}<h1 id="site-name"><a href="/">Главная страница</a></h1>{% endblock %}
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
